--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
+  "scripts": {
+    "start": "edgio dev",
+    "deploy": "edgio deploy"
+  },
   "name": "error-handling-example",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@edgio/cli": "^7.0.20",
+    "@edgio/core": "^7.0.20",
+    "@edgio/devtools": "^7.0.20",
+    "@edgio/next": "^7.0.20",
+    "@edgio/prefetch": "^7.0.20",
+    "@edgio/react": "^7.0.20",
     "eslint": "7",
     "eslint-config-next": "13.4.6"
   }
